--- a/configration/VaporCMS/Resources/Views/article.mustache
+++ b/configration/VaporCMS/Resources/Views/article.mustache
@@ -6,12 +6,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<script src="http://code.jquery.com/jquery-latest.js"></script>
+
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/styles/common.css" rel="stylesheet">
 </head>
 
 <body>
-	{{>header}}
+	{{>content_header}}
 
 	<div class="content">
 		<div class="container">
@@ -24,8 +26,9 @@
 				投稿日時 : {{ createdAt }}
 			</div>
 
+			<hr class="content-border">
 			<div id="article-content">
-				{{ content }}
+				{{{ content }}}
 			</div>
 
 		</div>
