公開用ヘッダー部分のデザインを修正

--- a/Public/styles/card.css
+++ b/Public/styles/card.css
@@ -1,9 +1,11 @@
 div.card {
-  margin: 20px auto;
-  width: 90%;
-  border-radius: 5px;
-  background-color: rgba(244,244,244,0.6);
-  border: solid 1px rgba(224,224,224,0.6);
+  margin: 40px auto;
+  width: 85%;
+  text-align: left;
+}
+
+.card-title{
+  font-size: 28px;
 }
 
 .card-text{
