--- a/Public/styles/common.css
+++ b/Public/styles/common.css
@@ -88,7 +88,7 @@ span.header-link{
 
 #article-content h3{
 	font-weight: bold;
-	margin-top: 24px;
+	margin-top: 44px;
 	margin-bottom: 20px;
 	padding-bottom: 10px;
 	border-bottom: 1px solid #ddd;
@@ -111,7 +111,7 @@ span.header-link{
 }
 
 #article-content ul{
-	margin: 0 0 0 24px;
+	margin: 0 0 24px 24px;
 	padding: 0;
 }
 
