デザイン修正

--- a/Public/styles/card.css
+++ b/Public/styles/card.css
@@ -1,19 +1,19 @@
 div.card {
-  margin: 40px auto;
-  width: 85%;
-  text-align: left;
+    margin: 40px auto;
+    width: 95%;
+    text-align: left;
 }
 
 .card-title{
-  font-size: 24px;
+    font-size: 24px;
 }
 
 .card-text{
-  margin: 20px 100px;
+    margin: 20px 100px;
 }
 
-div.card-footer{
-  margin-top: 10px;
+.card-footer{
+    font-size: 12px;
 }
 
 @media screen and ( max-width: 480px ){
@@ -22,6 +22,6 @@ div.card-footer{
   }
 
   .card-title{
-    font-size: 18px;
+    font-size: 16px;
   }
 }
